--- a/client/src/pages/Login/styles.module.scss
+++ b/client/src/pages/Login/styles.module.scss
@@ -33,11 +33,18 @@
     }
 
     & .formControl {
-        
+      display: flex;
+      flex-direction: column;
+
       & .textField {
         margin-top: 15px;
         width: 450px;
-        font-size: 20px !important;
+        font-size: 15px !important;
+
+        & ::-webkit-input-placeholder {
+          font-size: 12px !important;
+          line-height: 3;
+        }
       }
 
       & .btnLogin {
