--- a/client/src/components/Header/styles.module.scss
+++ b/client/src/components/Header/styles.module.scss
@@ -1,10 +1,12 @@
 .root {
   background: var(--white-1);
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  box-shadow: rgba(99, 99, 99, 0) 0px 2px 8px 0px;
+  padding: 10px;
 
   & .logo {
     cursor: pointer;
-    img {
+
+    & img {
       width: 126px;
       object-fit: cover;
     }
@@ -16,7 +18,7 @@
   }
 
   & .textField {
-    width: 100%;
+    width: 60%;
     border-radius: 20px !important;
   }
 }
