--- a/client/src/components/CourseList/CourseIn4/styles.module.scss
+++ b/client/src/components/CourseList/CourseIn4/styles.module.scss
@@ -103,10 +103,68 @@
         margin-bottom: 30px;
       }
 
-      & .btnGetCourse {
-        background: var(--smooth-blue);
-        color: var(--white-1);
-        padding: 20px 40px;
+      .boxBtnGetCourse {
+        cursor: pointer;
+        display: inline-block;
+        width: 160px;
+        position: relative;
+        border: 1px solid var(--dark-blue);
+        z-index: 0;
+        transition: all 0.2s ease;
+        opacity: 1;
+        margin-right: -1px;
+
+        &:hover {
+          z-index: 10;
+        }
+
+        &:before,
+        &:after {
+          content: '';
+          display: block;
+          position: absolute;
+          background: var(--green);
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          animation-iteration-count: 1;
+          transform-origin: 50% 50%;
+          opacity: 1;
+        }
+        &:before {
+          width: calc(100% + 2px);
+          height: 100%;
+          z-index: 1;
+          transition: height 0.5s ease, opacity 0.4s ease;
+        }
+
+        &:after {
+          height: calc(100% + 2px);
+          width: 100%;
+          z-index: 1;
+          transition: width 0.5s ease, opacity 0.4s ease;
+        }
+
+        &:hover,
+        &:focus {
+          &:before {
+            transition: height 0.2s ease, opacity 0.3s ease;
+            height: 85%;
+            opacity: 0.7;
+          }
+
+          &:after {
+            transition: width 0.2s ease, opacity 0.3s ease;
+            width: 85%;
+            opacity: 0.8;
+          }
+        }
+        & .btnGetCourse {
+          width: 100%;
+          z-index: 9;
+          // background: var(--black-0);
+          color: var(--black-0);
+        }
       }
 
       & .quickIn4 {
