--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,15 +44,18 @@ code {
 }
 .swiper-button-prev,
 .swiper-button-next {
-  width: 46px !important;
-  height: 46px !important;
+  width: 24px !important;
+  height: 24px !important;
   padding: 5px;
   border-radius: 100%;
   background: #fff;
   font-size: 18px;
+  text-shadow: horizontal-offset vertical-offset blur color;
   color: #a7d8dc !important;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 
-.swiper-button-prev {
-  position: fixed
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  font-size: 18px !important;
 }
