--- a/client/src/pages/Admin/Banner/CreateBanner/BannerView/styles.module.scss
+++ b/client/src/pages/Admin/Banner/CreateBanner/BannerView/styles.module.scss
@@ -1,15 +1,15 @@
 .root {
   display: flex;
   padding: 15px 90px;
-  width: 90%;
-  height: 200px;
+  width: 95%;
+  height: 250px;
   justify-content: space-evenly;
 
   & .content {
     flex-grow: 5;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: flex-start;
 
     .btn {
