--- a/client/src/components/CarouselBanner/BannerItem/styles.module.scss
+++ b/client/src/components/CarouselBanner/BannerItem/styles.module.scss
@@ -63,9 +63,10 @@
     align-items: center;
     & img {
       margin: 0 auto;
-      width: 100%;
-      height: 100%;
+      width: 300px;
+      height: 200px;
       object-fit: cover;
+      border-radius: 30px;
     }
   }
 }
