--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,3 +68,8 @@ code {
 .swiper-button-next::after {
   font-size: 18px !important;
 }
+
+.ag-cell {
+  display: flex !important;
+  align-items: center !important;
+}
