FIX Box avatar, Delete Feedback

--- a/client/src/components/Admin/Feedback/FeedbackIn4/styles.module.scss
+++ b/client/src/components/Admin/Feedback/FeedbackIn4/styles.module.scss
@@ -3,10 +3,12 @@
   margin-top: 50px;
   justify-content: space-around;
 
+
   & .feedback {
     border: 1px solid #ccc;
     border-radius: 20px;
     padding: 40px;
+    width: 50%;
 
     & .title {
       margin-bottom: 15px;
