--- a/client/src/pages/BlogsPage/CreateBlog/styles.module.scss
+++ b/client/src/pages/BlogsPage/CreateBlog/styles.module.scss
@@ -29,5 +29,17 @@
         font-weight: bold;
       }
     }
+
+    & .footer {
+      margin-top: 20px;
+      width: 80%;
+      & .buttonSubmit {
+        margin-bottom: 50px;
+        background-color: var(--dark-blue);
+        color: var(--white-1);
+        font-size: 20px;
+        font-weight: bold;
+      }
+    }
   }
 }
