--- a/client/src/components/BlogsList/BlogIn4/styles.module.scss
+++ b/client/src/components/BlogsList/BlogIn4/styles.module.scss
@@ -4,10 +4,10 @@
   justify-content: center;
 
   & .container {
-    width: 50%;
+    width: 70%;
     padding: 35px;
     text-align: justify;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    // box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
     & .header {
       & .title {
@@ -35,6 +35,7 @@
     position: fixed;
     margin-top: 50px;
     margin-left: -70%;
+    width: 10%;
     & .icon {
       margin-right: 20px;
       cursor: pointer;
